# small-creation

./: README.md
AO3-Nginx-ReverseProxy/: nginx.conf
AppVeyor-BuildScripts/: Aomenc-Dev-Windows-noasm-x64.yml  Aomenc-Stable-Windows-noasm-x64.yml  VMAF-Windows-x64.yml  Vapoursynth-Editor-Stable-Linux-amd64.yml  Weasel-master.yml  rAV1e-Dev-Windows-x64.yml  strongSwan-Windows.yml  x265-Asuna-Stable-Linux-amd64.yml  x265-Asuna-Stable-Windows-x64.yml  x265-Stable-Linux-amd64.yml  x265-Yuuki-Stable-Windows-x64.yml
C语言程设-大一上/大作业/: CMakeLists.txt  dboperation.cpp  dboperation.h  includeheaders.cpp  includeheaders.h  main.cpp  softio.cpp  softio.h
LaTeX-Beamer-Presentation/: main-demo.tex
Netkeeper-OpenWRT-Precompiled/: confnetwork.sh
OS-FastReconfigure-Files/: README.md  VS2019ENT.vsconfig  VS2019_Unity.vsconfig  VS2022_FullDev.vsconfig
OpenWRT-NanoPiR2S/: config.yml  feeds.conf
SynthV-Scripts/: Lua环境信息.lua  SineVibrato.lua  SineVibratoForSV_Alpha1.1.lua  SineVibratoForSV_Alpha1.2.lua  SineVibratoForSV_Alpha1.3.lua  SineVibratoForSV_Alpha1.4.lua  SineVibratoForSV_Beta1.5.lua
Tricolour-Lovestory/: README.md  Tricolour-Lovestory_export.py  Tricolour-Lovestory_prologue.txt
VPS-Services/: freshrss.yml
VapourSynth&AviSynth-Script/: ExampleScript.vpy  LoadVideo.vpy  SVP补帧-动画预设-脚本.avs
VapourSynth&AviSynth-ToolScript/: CheckPlugins&Functions.py  CompareVideos.vpy  Functions-LAZYPACK.txt  RemoveGrainCalc.py  YUVConvert.py
php_compile/: php 7.4.9 compile.txt
密码学实验-大二下/: Bugs.txt
简明信安数学-大二上/: Diffie-Hellman.py  求x模y的指数.py
计算机组成原理-大二下/: README.txt
(+226 files in other folders)
